Quick fixes for the alerts - These should now display in a sane, readable manner.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -176,9 +176,14 @@ body {
       margin: 0;
       width: 100%;
       color: white;
-      &.alert-success { background-color: #00FF00; }
+      border: none;
+      border-radius: 0;
+      &.alert-success { background-color: #00bd00; }
       &.alert-info { background-color: $siteRed; }
-      &.alert-warning { background-color: #FFFF00; }
+      &.alert-warning {
+        background-color: #FFFF00;
+        color: black;
+      }
       &.alert-danger { background-color: #FF0000; }
     }
   }
